Adding module jdk.compiler to fix build issue with jdk 17
Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>